  - New "rename" command to rename files.  Useful for scripted
    worst frame and spinloop profiling
  - Address space in 'dm' command can be given like in DSP disassembly,
    "dm x:$100", in addition to earlier "dm x $100" syntax
  - Fix out of bounds memory access that could result in bad disassembly
    output when using the external disassembler (only "dc.w" were printed)

Tools:
- New hatari_spinloop.py script for post-processing loop profile data.
  It can tell how many times loops were executed, how many times they
  spinned at minimum and maximum, at which VBL those happened, and what
  was the standard deviation of that.
- gst2ascii DATA/BSS debug symbol offsets are fixed while still providing
  support for the incorrect offsets used by older VBCC vlink
- hconsole.Main() takes now Hatari command line options as argument
- AHCC/GCC/VBCC examples on using (all) Native Features APIs
- Improved mingw cross-compilation support

Fixed demos :
- 4-pixel plasma screen by TOS Crew (video, color change during only 4 cycles)
- HighResMode by Paradox (video, color changes in overscan med res at 60 Hz)
- It's A Girl 2 by Paradox (video, bottom border removal on a 60 Hz screen)
- Pacemaker by Paradox (microwire, YM sound was muted)
- Panic by Paulo Simoes (video, was broken since Hatari 1.7)
- Shforstv.exe by Paulo Simoes (video, did not work in STE mode)
- Sommarhack 2011 Invitro by DHS (CPU/MFP, top border not removed)
- Stax Compilation #65 (conflict with Mega ST's RTC)
- The Union Demo (cpu, memory access, ikbd, protection)
- The World Is My Oyster - Convention Report Part by Aura (video, res=3)
- Tymewarp (cpu, bus error)
- UMD 8730 by PHF (video, unused bits in STF color registers)
- IKBD no jitter by Nyh (acia/video, use a VBL of 160240 cycles)

Fixed games :
- Batman The Movie (cpu, exception stack)
- Chart Attack Compilation (cpu, prefetch)
- Darkman (cpu, prefetch)
- Dragon Flight (cpu, illegal instruction)
- International 3D Tennis (cpu, prefetch)